Drop -alt variant

--- a/mixbench-cuda/CMakeLists.txt
+++ b/mixbench-cuda/CMakeLists.txt
@@ -22,10 +22,7 @@ file(WRITE "version_info.h" "#define VERSION_INFO \"")
 file(APPEND "version_info.h" ${GIT_REV})
 file(APPEND "version_info.h" "\"")
 
-add_executable(mixbench-cuda-ro main-cuda.cpp mix_kernels_cuda.h lcutil.h version_info.h mix_kernels_cuda_ro.cu mix_kernels_cuda.h lcutil.h)
-add_executable(mixbench-cuda-alt main-cuda.cpp mix_kernels_cuda.h lcutil.h version_info.h mix_kernels_cuda.cu mix_kernels_cuda.h lcutil.h)
+add_executable(mixbench-cuda main-cuda.cpp mix_kernels_cuda.h lcutil.h version_info.h mix_kernels_cuda.cu mix_kernels_cuda.h lcutil.h)
 
-target_compile_definitions(mixbench-cuda-ro PRIVATE READONLY)
-
-target_compile_features(mixbench-cuda-ro PUBLIC cxx_std_11)
+target_compile_features(mixbench-cuda PUBLIC cxx_std_11)
 
