Add proper g++ flags

--- a/mixbench-cpu/CMakeLists.txt
+++ b/mixbench-cpu/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(mixbench-cpu LANGUAGES CXX)
 
-set( CMAKE_CXX_EXTENSIONS OFF )
+set(CMAKE_CXX_EXTENSIONS OFF)
 include_directories("../include")
 
 find_package(OpenMP)
@@ -14,13 +14,16 @@ option(BASELINE_IMPL "Use baseline implementation" OFF)
 
 # Set default build type to RelWithDebInfo if not specified
 if (NOT CMAKE_BUILD_TYPE)
-    message (STATUS "Default CMAKE_BUILD_TYPE not set. Using Release with Debug Info")
+    message (STATUS "CMAKE_BUILD_TYPE not set. Using Release with Debug Info")
     set (CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE
         STRING "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel"
         FORCE)
 endif()
 
-message(STATUS "CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
+if (NOT CMAKE_CXX_FLAGS)
+    message (STATUS "CMAKE_CXX_FLAGS not set. Using -march=native -funroll-loops")
+    set (CMAKE_CXX_FLAGS "-march=native -funroll-loops")
+endif()
 
 # Get version info from git tag
 execute_process(COMMAND git describe --tags --always
