Add ROCM_PATH to module search PATH. This is required because from ROCm 6.0 the directory sturcture will be /opt/rocm instead of /opt/rocm/hip.

--- a/mixbench-hip/CMakeLists.txt
+++ b/mixbench-hip/CMakeLists.txt
@@ -7,7 +7,14 @@ if(NOT DEFINED HIP_PATH)
         set(HIP_PATH $ENV{HIP_PATH} CACHE PATH "Path to which HIP has been installed")
     endif()
 endif()
-set(CMAKE_MODULE_PATH "${HIP_PATH}/cmake" ${CMAKE_MODULE_PATH})
+if(NOT DEFINED ROCM_PATH)
+    if(NOT DEFINED ENV{ROCM_PATH})
+        set(ROCM_PATH "/opt/rocm/" CACHE PATH "Path to ROCM installation")
+    else()
+        set(ROCM_PATH $ENV{ROCM_PATH} CACHE PATH "Path to ROCM installation")
+    endif()
+endif()
+set(CMAKE_MODULE_PATH "${HIP_PATH}/cmake" "${ROCM_PATH}/lib/cmake" {CMAKE_MODULE_PATH})
 
 project(mixbench-hip LANGUAGES CXX)
 
