enable multiple runs

--- a/mixbench-sycl/CMakeLists.txt
+++ b/mixbench-sycl/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(mixbench-sycl LANGUAGES CXX)
 
+include_directories("../include")
+
 # Set default build type to RelWithDebInfo if not specified
 if (NOT CMAKE_BUILD_TYPE)
     message (STATUS "Default CMAKE_BUILD_TYPE not set. Using Release with Debug Info")
