--- a/mixbench-hip/CMakeLists.txt
+++ b/mixbench-hip/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 
 if(NOT DEFINED HIP_PATH)
     if(NOT DEFINED ENV{HIP_PATH})
-        set(HIP_PATH "/opt/rocm/hip" CACHE PATH "Path to which HIP has been installed")
+        set(ENV{HIP_PATH} "/opt/rocm/hip")
     else()
         set(HIP_PATH $ENV{HIP_PATH} CACHE PATH "Path to which HIP has been installed")
     endif()
 endif()
 if(NOT DEFINED ROCM_PATH)
     if(NOT DEFINED ENV{ROCM_PATH})
-        set(ROCM_PATH "/opt/rocm/" CACHE PATH "Path to ROCM installation")
+        set(ENV{ROCM_PATH} "/opt/rocm/")
     else()
         set(ROCM_PATH $ENV{ROCM_PATH} CACHE PATH "Path to ROCM installation")
     endif()
