hip: add "ENV" modifiers (#50)

--- a/mixbench-hip/CMakeLists.txt
+++ b/mixbench-hip/CMakeLists.txt
@@ -1,18 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 
+if(NOT DEFINED ENV{HIP_PATH})
+    set(ENV{HIP_PATH} "/opt/rocm/hip")
+endif()
+if(NOT DEFINED ENV{ROCM_PATH})
+    set(ENV{ROCM_PATH} "/opt/rocm/")
+endif()
 if(NOT DEFINED HIP_PATH)
-    if(NOT DEFINED ENV{HIP_PATH})
-        set(HIP_PATH "/opt/rocm/hip" CACHE PATH "Path to which HIP has been installed")
-    else()
-        set(HIP_PATH $ENV{HIP_PATH} CACHE PATH "Path to which HIP has been installed")
-    endif()
+    set(HIP_PATH $ENV{HIP_PATH} CACHE PATH "Path to which HIP has been installed")
 endif()
 if(NOT DEFINED ROCM_PATH)
-    if(NOT DEFINED ENV{ROCM_PATH})
-        set(ROCM_PATH "/opt/rocm/" CACHE PATH "Path to ROCM installation")
-    else()
-        set(ROCM_PATH $ENV{ROCM_PATH} CACHE PATH "Path to ROCM installation")
-    endif()
+    set(ROCM_PATH $ENV{ROCM_PATH} CACHE PATH "Path to ROCM installation")
 endif()
 set(CMAKE_MODULE_PATH "${HIP_PATH}/cmake" "${ROCM_PATH}/lib/cmake" {CMAKE_MODULE_PATH})
 
